flask-app/ci/k8s/app-manifest.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-api-service
spec:
  type: ClusterIP
  ports:
  #  - port: 8000 
  #    targetPort: 8000 
   - port: 80
     targetPort: 80 
  selector:
    app: app 
    tier: api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-api-deployment
  labels:
    app: app 
    tier: api
spec:
  selector:
    matchLabels:
      app: app 
      tier: api
  replicas: 1
  template:
    metadata:
      name: flask-api
      labels:
        app: app 
        tier: api
        # sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: flask-api
          # image: 488144151286.dkr.ecr.us-west-1.amazonaws.com/flask-api:latest #change
          image: nginx #change          
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 512Mi  
          ports:
          - containerPort: 8000
            name: flask-api
      serviceAccountName: flask-api-rbac
